<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".MainActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/photoTaken"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:contentDescription="@string/photo_you_took"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/ic_launcher" />

        <Button
            android:id="@+id/takePhoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/take_picture"
            app:layout_constraintEnd_toStartOf="@+id/selectFile"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/photoTaken" />

        <Button
            android:id="@+id/selectFile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/select_file"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/takePhoto"
            app:layout_constraintTop_toBottomOf="@+id/photoTaken" />

        <EditText
            android:id="@+id/webText"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:ems="10"
            android:hint="@string/introdueix_web"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toStartOf="@+id/webButton"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/takePhoto" />

        <EditText
            android:id="@+id/phoneText"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:ems="10"
            android:hint="@string/introdueix_tel_fon"
            android:inputType="phone"
            android:digits="0123456789+"
            app:layout_constraintEnd_toStartOf="@+id/phoneButton"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/webText" />

        <EditText
            android:id="@+id/dateText"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:ems="10"
            android:hint="@string/data"
            android:inputType="date"
            app:layout_constraintEnd_toStartOf="@+id/hourText"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="@+id/phoneText"
            app:layout_constraintTop_toBottomOf="@+id/phoneText" />

        <EditText
            android:id="@+id/hourText"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hora"
            android:inputType="time"
            app:layout_constraintBottom_toBottomOf="@+id/dateText"
            app:layout_constraintEnd_toEndOf="@+id/phoneText"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/dateText"
            app:layout_constraintTop_toTopOf="@+id/dateText" />

        <EditText
            android:id="@+id/randomText"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:ems="10"
            android:hint="@string/introdueix_text"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toStartOf="@+id/randomButton"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dateText" />

        <Button
            android:id="@+id/webButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/go"
            app:layout_constraintBottom_toBottomOf="@+id/webText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/webText"
            app:layout_constraintTop_toTopOf="@+id/webText" />

        <Button
            android:id="@+id/phoneButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/go"
            app:layout_constraintBottom_toBottomOf="@+id/phoneText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/phoneText"
            app:layout_constraintTop_toTopOf="@+id/phoneText" />

        <Button
            android:id="@+id/randomButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/go"
            app:layout_constraintBottom_toBottomOf="@+id/randomText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/randomText"
            app:layout_constraintTop_toTopOf="@+id/randomText" />

        <Button
            android:id="@+id/alarmButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/program"
            app:layout_constraintBottom_toBottomOf="@+id/hourText"
            app:layout_constraintEnd_toEndOf="@+id/phoneButton"
            app:layout_constraintStart_toStartOf="@+id/phoneButton"
            app:layout_constraintTop_toTopOf="@+id/hourText" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/randomText" />
    </android.support.constraint.ConstraintLayout>
</android.support.v4.widget.NestedScrollView>